<resources>
    <string name="app_name">Project Management</string>
    <string name="made_by_the_best_developer">Made by the best developer</string>
    <string name="image_contentdescription">image_contentDescription</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="app_details">Welcome to the best app for Project Management \n Paste your Projects here to get timely notified</string>
    <string name="signin">SIGN IN</string>
    <string name="singup">SIGN UP</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Please enter your email and password to sign in</string>
    <string name="please_wait">Please Wait…</string>
    <string name="please_click_back_to_exit">Please click back to exit</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="create_board">Create Board</string>
    <string name="there_is_no_such_task">There is no such task</string>
    <string name="board_name">Board Name</string>
    <string name="create">Create</string>
    <string name="created_by">Created By</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>
    <string name="cancle">CANCLE</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="card_details">Card Details</string>
    <string name="delete_card">Delete Card</string>
    <string name="are_you_sure_you_want_to_delete_card">Are you sure you want to delete card</string>
    <string name="confirmation_to_delete_card">Confirmation to delete card</string>
    <string name="alert">Alert</string>
    <string name="select_label_color">Select Label Color</string>
    <string name="select_member">Select Member</string>
    <string name="select">Select</string>
    <string name="image">image</string>
    <string name="default_notification_name">Project Management Channel Id</string>


</resources>