<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_shape_rounded"
        app:cardElevation="@dimen/dialog_member_cv_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dialog_member_content_padding">
            <TextView
                android:id="@+id/tvDialogText"
                android:layout_width="match_parent"
                android:padding="@dimen/dialog_member_title_padding"
                android:layout_height="wrap_content"
                android:text="@string/search_member"
                android:textSize="@dimen/member_dialog_action_button_text_size"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:background="@color/white" />
            
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/member_dialog_til_email_marginTop">
              <androidx.appcompat.widget.AppCompatEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_email_member"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"
                  android:textSize="@dimen/member_dialog_action_button_text_size"/>
          </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/addButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/add"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:textColor="@color/gradient1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/member_dialog_action_button_text_size"
                    />
                <TextView
                    android:id="@+id/cancleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/cancle"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/member_dialog_action_button_text_size"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>