<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Profile_View"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/ic_background">
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
          android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
          android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
          android:elevation="@dimen/card_view_elevation"
          app:cardCornerRadius="@dimen/card_view_corner_radius">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <com.mikhaellopez.circularimageview.CircularImageView
              android:id="@+id/my_profile_image"
              android:layout_width="@dimen/nav_image_size"
              android:layout_height="@dimen/nav_image_size"
              android:layout_marginStart="@dimen/nav_content_margin_StartEnd"
              android:layout_marginEnd="@dimen/nav_content_margin_StartEnd"
              android:layout_gravity="center"
              app:civ_border_color="@color/white"
              android:layout_marginTop="18dp"
              app:civ_border_width="@dimen/nav_image_circular_border_width"
              android:contentDescription="@string/image_contentdescription"
              android:src="@drawable/ic_user_place_holder"
              >

          </com.mikhaellopez.circularimageview.CircularImageView>
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
              android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
              android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/my_profile_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/name"
                  android:inputType="textEmailAddress"
                  android:textSize="@dimen/et_text_size" />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
              android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
              android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/my_profile_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="false"
                  android:focusable="false"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"
                  android:textSize="@dimen/et_text_size" />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
              android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
              android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/my_profile_mobile"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/mobile"
                  android:inputType="number"
                  android:textSize="@dimen/et_text_size" />
          </com.google.android.material.textfield.TextInputLayout>
          <Button
              android:id="@+id/btn_update"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="@dimen/btn_marginStartEnd"
              android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
              android:layout_marginEnd="@dimen/btn_marginStartEnd"
              android:background="@drawable/shape_button"
              android:foreground="?attr/selectableItemBackground"
              android:gravity="center"
              android:paddingTop="@dimen/btn_paddingTopBottom"
              android:paddingBottom="@dimen/btn_paddingTopBottom"
              android:text="@string/update"
              android:textColor="@android:color/white"
              android:textSize="@dimen/btn_text_size" />
      </LinearLayout>
      </androidx.cardview.widget.CardView>

  </LinearLayout>
</LinearLayout>